# eidetic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release-packaging.yaml  test-coverage.yaml
eidetic-abstract/: Cargo.toml
eidetic-abstract/src/: backend.rs  backend_data_type.rs  error.rs  lib.rs  tensor.rs  tensor_create.rs
eidetic-legacy/: Cargo.toml
eidetic-legacy/examples/: mnist-classification.rs
eidetic-legacy/src/: activations.rs  layers.rs  lib.rs  training.rs
eidetic-legacy/src/loss/: mean_squared_error.rs  softmax_cross_entropy.rs
eidetic-legacy/src/operations/: mod.rs
eidetic-legacy/src/optimisers/: base.rs  sgd.rs
eidetic-legacy/src/tensors/: rank.rs
eidetic-ndarray/: Cargo.toml
eidetic-ndarray/src/: lib.rs
examples/: mnist-classification.rs
src/: activations.rs  error.rs  errors.rs  layers.rs  lib.rs  prelude.rs  rank.rs  tensor.rs  training.rs  try_construct_tensor.rs
src/loss/: mean_squared_error.rs  mod.rs
src/operations/: mod.rs
src/operations/backward/: bias_add.rs  composite.rs  dense.rs  dropout.rs  mod.rs  sigmoid.rs  weight_multiply.rs
src/operations/forward/: bias_add.rs  composite.rs  dense.rs  input.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  tanh.rs  (+1 more)
src/ops/: base.rs  mod.rs
src/optim/: base.rs  mod.rs
src/optimisers/: base.rs  mod.rs  null.rs  sgd.rs  sgd_momentum.rs
src/private/: mod.rs  padding.rs
src/tensors/: mod.rs  rank.rs  try_construct_tensor.rs
tests/: test_input_operation.rs  test_linear_activation.rs  test_linear_operation.rs  test_sigmoid_activation.rs  test_tensors.rs
(+61 files in other folders)
