[package]
name = "eidetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rand = "0.8.5"
thiserror = {version = "1.0.31", optional = true}

[features]
f32 = []
std = []
thiserror = ["dep:thiserror", "std"]