[package]
name = "eidetic-ndarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
eidetic-abstract = { path = "../eidetic-abstract" }

[features]
std = ["eidetic-abstract/std"]
thiserror = ["eidetic-abstract/thiserror"]
